сделал табы описания и характеристик на странице продукта

--- a/src/views/pages/product-page.j2
+++ b/src/views/pages/product-page.j2
@@ -101,16 +101,210 @@
           <div class="container">
             <div class="product-page__panels tabs__panels">
               <div class="product-page__pannel tabs__panel">
-                Панель 1
+                <h3 class="product-page__pannel-title">Описание</h3>
+                <p class="product-page__panel-highlight">Производительность мирового класса и невероятная универсальность</p>
+                <p class="product-page__description-paragraph">
+                  Сервер HPE ProLiant DL380 Gen10 предназначен для сокращения расходов и упрощения работы.
+                </p>
+                <p class="product-page__description-paragraph">
+                  Масштабируемое семейство процессоров Intel® Xeon® 1-го и 2-го поколения позволяют повысить производительность на 60 %1 и использовать на 27 % больше ядер2. Кроме того, поддерживается 3 Тбайт памяти HPE DDR4 SmartMemory с быстродействием 2933 млн транзакций/с. Он поддерживает устройства SAS 12 Гбит/с и до 20 накопителей NVMe, а также большой выбор различных вычислительных решений.
+                </p>
+                <p class="product-page__description-paragraph">
+                  Исключительный уровень производительности и отказоустойчивости для баз данных и аналитических рабочих нагрузок благодаря энергонезависимой памяти HPE Persistent Memory.
+                </p>
+                <p class="product-page__description-paragraph">
+                  Сервер очень прост в развертывании и подходит для обслуживания как базовых, так и критически важных приложений.
+                </p>
+                <div class="product-page__docs">
+                  <p class="product-page__panel-subtitle">Документация</p>
+                  <ul class="product-page__docs-list">
+                    <li class="product-page__docs-item">
+                      <a class="product-page__docs-link blue-link" href="./Datasheet_DL380_gen10.pdf" target="_blank">
+                        <svg class="blue-link__icon" width="24" height="25" viewBox="0 0 24 25">
+                          <use xlink:href="img/sprite.svg#doc-icon"></use>
+                        </svg>
+                        <span class="blue-link__text">Datasheet_DL380_gen10.pdf</span>
+                      </a>
+                    </li>
+                    <li class="product-page__docs-item">
+                      <a class="product-page__docs-link blue-link" href="./Datasheet_DL380_gen10.pdf" target="_blank">
+                        <svg class="blue-link__icon" width="24" height="25" viewBox="0 0 24 25">
+                          <use xlink:href="img/sprite.svg#doc-icon"></use>
+                        </svg>
+                        <span class="blue-link__text">Datasheet_DL380_gen10.pdf</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+
               </div>
               <div class="product-page__pannel tabs__panel">
-                Панель 2
+                <h3 class="product-page__pannel-title">Технические характеристики</h3>
+                <ul class="product-page__charachteristics">
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Тип процессора</dt>
+                      <dd class="product-page__charachteristics-value">Intel</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Семейство процессоров</dt>
+                      <dd class="product-page__charachteristics-value">Intel® Xeon® Scalable серии 8100/8200 Intel® Xeon® Scalable серии 6100/6200 Intel® Xeon® Scalable серии 5100/5200 Intel® Xeon® Scalable серии 4100/4200 Intel® Xeon® Scalable серии 3100/3200</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Количество ядер процессора</dt>
+                      <dd class="product-page__charachteristics-value">4–28 ядер в зависимости от модели</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Кэш процессора</dt>
+                      <dd class="product-page__charachteristics-value">8,25–38,5 Мбайт L3, в зависимости от модели процессора</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Максимальный объем памяти</dt>
+                      <dd class="product-page__charachteristics-value">3 Тбайт с модулями DDR4 128 Гбайт, в зависимости от модели процессора; 6 Тбайт с комплектом модулей энергонезависимой памяти HPE Persistent Memory 2666 512 Гбайт, в зависимости от модели процессора</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Слоты для памяти</dt>
+                      <dd class="product-page__charachteristics-value">24 слота DIMM</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Тип памяти</dt>
+                      <dd class="product-page__charachteristics-value">Память HPE DDR4 SmartMemory и энергонезависимая память HPE Persistent Memory, в зависимости от модели</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Тип модуля NVDIMM</dt>
+                      <dd class="product-page__charachteristics-value">HPE NVDIMM-N <span class="product-page__charachteristics-star">*Доступно только в 1-м поколении масштабируемых процессоров Intel® Xeon® Scalable</span></dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Ранг модуля NVDIMM</dt>
+                      <dd class="product-page__charachteristics-value">Одноранговый</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Емкость модуля NVDIMM</dt>
+                      <dd class="product-page__charachteristics-value">16 Гбайт</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Поддерживаемый накопитель</dt>
+                      <dd class="product-page__charachteristics-value">8 или 12 дисков SAS/SATA/твердотельных накопителей большого форм-фактора, 8, 10, 16, 18 или 24 диска SAS/SATA/твердотельных накопителя малого форм-фактора; 2 твердотельных накопителя M.2 SATA (стандартно) в основной переходной плате, в зависимости от конфигурации; 6 дополнительных накопителей малого форм-фактора или 3 большого форм-фактора в заднем отсеке и 2 дополнительных накопителя малого форм-фактора или 2 накопителя форм-фактора Dual UFF в заднем отсеке; 20 дополнительных накопителей NVMe малого форм-фактора; поддержка NVMe через Express Bay с ограничением максимального объема накопителя</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Сетевой контроллер</dt>
+                      <dd class="product-page__charachteristics-value">Ethernet-адаптер HPE 331i, 1 Гбит/с, 4 порта на контроллер и/или дополнительный адаптер HPE FlexibleLOM (в зависимости от модели)</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Управление инфраструктурой</dt>
+                      <dd class="product-page__charachteristics-value">HPE iLO Standard с функцией Intelligent Provisioning (встроенная), HPE OneView Standard (стандартно, требуется загрузка), HPE iLO Advanced и HPE OneView Advanced (дополнительно; требуются лицензии)</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Функции системных вентиляторов</dt>
+                      <dd class="product-page__charachteristics-value">Резервные вентиляторы с возможностью горячей замены в стандартной комплектаци</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Слоты расширения</dt>
+                      <dd class="product-page__charachteristics-value">8</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Контроллер хранилища</dt>
+                      <dd class="product-page__charachteristics-value">1 контроллер HPE Smart Array S100i и/или 1 контроллер HPE Smart Array P408i-a и/или 1 HPE Smart Array P816i-a и/или 1 контроллер HPE Smart Array E208i-a, в зависимости от модели</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Модель процессора</dt>
+                      <dd class="product-page__charachteristics-value">Intel</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Количество процессоров</dt>
+                      <dd class="product-page__charachteristics-value">1 или 2</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Быстродействие процессора</dt>
+                      <dd class="product-page__charachteristics-value">3,9 ГГц (максимум), в зависимости от процессора</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Стандартный объем памяти</dt>
+                      <dd class="product-page__charachteristics-value">3 Тбайт (24 X 128 Гбайт) LRDIMM; 6 Тбайт (12 X 512 Гбайт) энергонезависимой памяти HPE Persistent Memory</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Безопасность</dt>
+                      <dd class="product-page__charachteristics-value">Дополнительный комплект запирающихся панелей, комплект для обнаружения вторжений и HPE TPM 2.0</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Форм-фактор</dt>
+                      <dd class="product-page__charachteristics-value">2U</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Вес (английская система)</dt>
+                      <dd class="product-page__charachteristics-value">32.6 lb</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Масса (метрическая система)</dt>
+                      <dd class="product-page__charachteristics-value">14,76 кг</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Габариты продукта (английская система) (H x B x T)</dt>
+                      <dd class="product-page__charachteristics-value">17,54 x 28,75 x 3,44 дюйма</dd>
+                    </dl>
+                  </li>
+                  <li class="product-page__charachteristics-item">
+                    <dl class="product-page__charachteristics-list">
+                      <dt class="product-page__charachteristics-name">Габариты продукта (метрическая система) (H x B x T)</dt>
+                      <dd class="product-page__charachteristics-value">44,55 x 73,03 x 8,74 см</dd>
+                    </dl>
+                  </li>
+                </ul>
+                <p class="product-page__copyright">Intel и Intel Xeon являются товарными знаками Intel Corporation в США и других странах. Microsoft и Azure являются зарегистрированными товарными знаками Microsoft Corporation в США и других странах. Все прочие товарные знаки являются собственностью соответствующих владельцев.</p>
               </div>
               <div class="product-page__pannel tabs__panel">
-                Панель 3
+                <h3 class="product-page__pannel-title">Готовые модели</h3>
               </div>
               <div class="product-page__pannel tabs__panel">
-                Панель 4
+                <h3 class="product-page__pannel-title">Гарантия и поддержка</h3>
               </div>
             </div>
           </div>
