--- a/src/scss/blocks/product-page.scss
+++ b/src/scss/blocks/product-page.scss
@@ -137,7 +137,7 @@
     content: "Что тут должно быть?";
     position: absolute;
     padding: 10px;
-    visibility: hidden;
+    display: none;
     opacity: 0;
     z-index: 1;
     bottom: 20px;
@@ -156,7 +156,7 @@
       fill: $button-color;
     }
     &::after {
-      visibility: visible;
+      display: block;
       opacity: 1;
     }
   }
@@ -226,7 +226,11 @@
   padding: 0;
   list-style-type: none;
   display: flex;
+  flex-direction: column;
 
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+  }
 }
 .product-page__tabs-item {
 }
@@ -242,7 +246,7 @@
   transition: all 0.3s ease;
 
   &:hover {
-    columns: $button-color;
+    color: $button-color;
   };
   &:focus-visible {
     outline: 2px solid $blue-color;
@@ -250,6 +254,10 @@
   }
   &:active {
     opacity: 0.7;
+  }
+
+  @media (max-width: $max-mobile-width) {
+    width: 100%;
   }
 }
 .product-page__tabs-button.tabs__button--active {
@@ -262,4 +270,129 @@
 .product-page__panels {
 }
 .product-page__pannel {
+  padding-top: 22px;
+  padding-bottom: 45px;
+
+  @media (min-width: $desktop-width) {
+    padding-top: 45px;
+  }
 }
+.product-page__pannel-title {
+  margin: 0;
+  margin-bottom: 35px;
+  padding: 0;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 135%;
+
+  @media (min-width: $desktop-width) {
+    font-size: 28px;
+    line-height: 115%;
+    margin-bottom: 20px;
+  }
+}
+.product-page__panel-highlight {
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 120%;
+  text-transform: uppercase;
+  color: $grey-color;
+
+}
+.product-page__description-paragraph {
+  margin: 0;
+  margin-bottom: 25px;
+  font-size: 14px;
+  line-height: 130%;
+}
+.product-page__docs {
+}
+.product-page__panel-subtitle {
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 0;
+  font-family: "Jost", "Arial", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+}
+.product-page__docs-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+    gap: 30px;
+    flex-wrap: wrap;
+  }
+}
+.product-page__docs-item {
+}
+.product-page__docs-link {
+}
+.product-page__charachteristics {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+}
+.product-page__charachteristics-item {
+}
+.product-page__charachteristics-list {
+  margin: 0;
+  padding: 15px 0;
+
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+    align-items: center;
+  }
+}
+.product-page__charachteristics-name {
+  margin: 0;
+  padding: 0;
+  flex-shrink: 0;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 130%;
+
+  @media (min-width: $desktop-width) {
+    width: 255px;
+  }
+}
+.product-page__charachteristics-value {
+  margin: 0;
+  padding: 0;
+
+  font-size: 16px;
+  line-height: 130%;
+}
+.product-page__charachteristics-star {
+  display: block;
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+  line-height: 130%;
+  color: $grey-color;
+}
+.product-page__copyright {
+  margin: 0;
+  padding: 0;
+
+  font-size: 14px;
+  line-height: 130%;
+}
+
