--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 @import "./blocks/burger.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/next-link.scss";
+@import "./blocks/blue-link.scss";
 @import "./blocks/show-more.scss";
 @import "./blocks/modal.scss";
 @import "./blocks/modal-image.scss";
