сделал секцию с листом карточек

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,4 +55,5 @@
 @import "./blocks/product-card.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/product-page.scss";
+@import "./blocks/cards-list.scss";
 
