--- a/src/views/pages/product-page.j2
+++ b/src/views/pages/product-page.j2
@@ -312,7 +312,8 @@
       </div>
     </section>
     {% include "./blocks/need-help.j2" %}
-
+    {% include "./blocks/cards-list.j2" %}
+    {% include "./blocks/our-advantages.j2" %}
   </main>
 {% endblock content %}
 
