--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -56,4 +56,5 @@
 @import "./blocks/catalog.scss";
 @import "./blocks/product-page.scss";
 @import "./blocks/cards-list.scss";
+@import "./blocks/vendor.scss";
 
