работаю над мобильной версией карточек сравнения

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 
 // @import "./vendor/choices/base.min.scss";
 @import "./vendor/choices/choices.min.scss";
+@import "./vendor/swiper/swiper-bundle.scss";
 
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/container.scss";
@@ -57,4 +58,6 @@
 @import "./blocks/product-page.scss";
 @import "./blocks/cards-list.scss";
 @import "./blocks/vendor.scss";
+@import "./blocks/comparison.scss";
+@import "./blocks/swiper.scss";
 
