--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -8,6 +8,7 @@
       <h1>Главная</h1>
       <a href="./certificates.html">Сертификаты</a>
       <a href="./reviews.html">Отзывы</a>
+      <a href="./comparison.html">Сравнение</a>
     </div>
   </main>
 {% endblock content %}
