--- a/src/views/pages/comparison.j2
+++ b/src/views/pages/comparison.j2
@@ -53,6 +53,19 @@
         </ul>
       </div>
       <div class="comparison__cards">
+        <ul class="comparison__mobile-props-list">
+          <li class="comparison__mobile-props-item">Модель</li>
+          <li class="comparison__mobile-props-item">Производитель</li>
+          <li class="comparison__mobile-props-item">Стоимость</li>
+          <li class="comparison__mobile-props-item">Тип процессора</li>
+          <li class="comparison__mobile-props-item">Поколение процессоров</li>
+          <li class="comparison__mobile-props-item">Форм-<br>фактор</li>
+          <li class="comparison__mobile-props-item">Кол-во слотов для HDD</li>
+          <li class="comparison__mobile-props-item">Оперативная память</li>
+          <li class="comparison__mobile-props-item">Обьем памяти</li>
+          <li class="comparison__mobile-props-item">Количество блоков питания</li>
+          <li class="comparison__mobile-props-item">Наличие</li>
+        </ul>
         <div class="comparison__swiper swiper">
           <ul class="comparison__cards-list swiper-wrapper">
             <li class="comparison__cards-item swiper-slide">
@@ -76,7 +89,7 @@
                     <span class="camparison__characteristics-name">Стоимость</span>
                     <div class="camparison__prices">
                       <span class="camparison__price">582 940 ₽</span>
-                      <span class="camparison__credit">или <span class="product-page__credit-value">24 290 ₽</span> в месяц</span>
+                      <span class="camparison__credit">или <span class="product-page__credit-value">24 290 ₽</span> в&nbsp;месяц</span>
                     </div>
                   </li>
                   <li class="camparison__characteristics-item">
@@ -105,7 +118,70 @@
                   </li>
                   <li class="camparison__characteristics-item">
                     <span class="camparison__characteristics-name">Количество блоков питания</span>
-                    <span class="camparison__characteristics-value">Количество блоков питания</span>
+                    <span class="camparison__characteristics-value">2</span>
+                  </li>
+                  <li class="camparison__characteristics-item">
+                    <span class="camparison__characteristics-name">Наличие</span>
+                    <span class="camparison__characteristics-value">+</span>
+                  </li>
+                </ul>
+                <div class="comparison__card-buttons">
+                  <a class="comparison__card-button button" href="#!">Заказать</a>
+                  <a class="comparison__card-toolbar-button blue-link blue-link--no-svg" href="#!">Конфигуратор</a>
+                </div>
+              </div>
+            </li>
+            <li class="comparison__cards-item swiper-slide">
+              <div class="comparison__card">
+                <ul class="camparison__characteristics-list">
+                  <li class="camparison__characteristics-item camparison__characteristics-item--model">
+                    <span class="camparison__characteristics-name">Модель</span>
+                    <a class="camparison__model" href="product-page.html">iRU Office 310A3SM MT123123 123123 12312312312 123123</a>
+                    <a class="comparison__model-card-image-link" href="product-page.html">
+                      <img class="comparison__card-image" src="@img/product-card-image-1.jpg" alt="">
+                    </a>
+                  </li>
+                  <li class="camparison__characteristics-item camparison__characteristics-item--vendor">
+                    <span class="camparison__characteristics-name">Производитель</span>
+                    <span class="camparison__vendor filter">
+                      <span class="visually-hidden">iru.</span>
+                      <img class="filter__image" src="@img/filter-vendor-iru.png" alt="">
+                    </span>
+                  </li>
+                  <li class="camparison__characteristics-item camparison__characteristics-item--price">
+                    <span class="camparison__characteristics-name">Стоимость</span>
+                    <div class="camparison__prices">
+                      <span class="camparison__price">582 940 ₽</span>
+                      <span class="camparison__credit">или <span class="product-page__credit-value">24 290 ₽</span> в&nbsp;месяц</span>
+                    </div>
+                  </li>
+                  <li class="camparison__characteristics-item">
+                    <span class="camparison__characteristics-name">Тип процессора</span>
+                    <span class="camparison__characteristics-value"> IntelIntelIntel IntelIntel IntelIntel IntelIntel IntelIntel</span>
+                  </li>
+                  <li class="camparison__characteristics-item">
+                    <span class="camparison__characteristics-name">Поколение процессоров</span>
+                    <span class="camparison__characteristics-value">Intel Xeon Scalable серии 8100/8200 Intel Xeon Scalable серии 8100/8200 Intel Xeon Scalable серии 8100/8200 Intel Xeon Scalable серии 8100/8200</span>
+                  </li>
+                  <li class="camparison__characteristics-item">
+                    <span class="camparison__characteristics-name">Форм-фактор</span>
+                    <span class="camparison__characteristics-value">1U</span>
+                  </li>
+                  <li class="camparison__characteristics-item">
+                    <span class="camparison__characteristics-name">Кол-во слотов для HDD</span>
+                    <span class="camparison__characteristics-value">8</span>
+                  </li>
+                  <li class="camparison__characteristics-item">
+                    <span class="camparison__characteristics-name">Оперативная память</span>
+                    <span class="camparison__characteristics-value">4 слота от 2 до 32 Гб</span>
+                  </li>
+                  <li class="camparison__characteristics-item">
+                    <span class="camparison__characteristics-name">Обьем памяти</span>
+                    <span class="camparison__characteristics-value">3 Тбайт (24 X 128 Гбайт) LRDIMM 3 Тбайт (24 X 128 Гбайт) LRDIMM 3 Тбайт (24 X 128 Гбайт) LRDIMM 3 Тбайт (24 X 128 Гбайт) LRDIMM 3 Тбайт (24 X 128 Гбайт) LRDIMM</span>
+                  </li>
+                  <li class="camparison__characteristics-item">
+                    <span class="camparison__characteristics-name">Количество блоков питания</span>
+                    <span class="camparison__characteristics-value">2</span>
                   </li>
                   <li class="camparison__characteristics-item">
                     <span class="camparison__characteristics-name">Наличие</span>
@@ -139,7 +215,7 @@
                     <span class="camparison__characteristics-name">Стоимость</span>
                     <div class="camparison__prices">
                       <span class="camparison__price">582 940 ₽</span>
-                      <span class="camparison__credit">или <span class="product-page__credit-value">24 290 ₽</span> в месяц</span>
+                      <span class="camparison__credit">или <span class="product-page__credit-value">24 290 ₽</span> в&nbsp;месяц</span>
                     </div>
                   </li>
                   <li class="camparison__characteristics-item">
@@ -168,7 +244,7 @@
                   </li>
                   <li class="camparison__characteristics-item">
                     <span class="camparison__characteristics-name">Количество блоков питания</span>
-                    <span class="camparison__characteristics-value">Количество блоков питания</span>
+                    <span class="camparison__characteristics-value">2</span>
                   </li>
                   <li class="camparison__characteristics-item">
                     <span class="camparison__characteristics-name">Наличие</span>
@@ -202,7 +278,7 @@
                     <span class="camparison__characteristics-name">Стоимость</span>
                     <div class="camparison__prices">
                       <span class="camparison__price">582 940 ₽</span>
-                      <span class="camparison__credit">или <span class="product-page__credit-value">24 290 ₽</span> в месяц</span>
+                      <span class="camparison__credit">или <span class="product-page__credit-value">24 290 ₽</span> в&nbsp;месяц</span>
                     </div>
                   </li>
                   <li class="camparison__characteristics-item">
@@ -231,70 +307,7 @@
                   </li>
                   <li class="camparison__characteristics-item">
                     <span class="camparison__characteristics-name">Количество блоков питания</span>
-                    <span class="camparison__characteristics-value">Количество блоков питания</span>
-                  </li>
-                  <li class="camparison__characteristics-item">
-                    <span class="camparison__characteristics-name">Наличие</span>
-                    <span class="camparison__characteristics-value">+</span>
-                  </li>
-                </ul>
-                <div class="comparison__card-buttons">
-                  <a class="comparison__card-button button" href="#!">Заказать</a>
-                  <a class="comparison__card-toolbar-button blue-link blue-link--no-svg" href="#!">Конфигуратор</a>
-                </div>
-              </div>
-            </li>
-            <li class="comparison__cards-item swiper-slide">
-              <div class="comparison__card">
-                <ul class="camparison__characteristics-list">
-                  <li class="camparison__characteristics-item camparison__characteristics-item--model">
-                    <span class="camparison__characteristics-name">Модель</span>
-                    <a class="camparison__model" href="product-page.html">iRU Office 310A3SM MT</a>
-                    <a class="comparison__model-card-image-link" href="product-page.html">
-                      <img class="comparison__card-image" src="@img/product-card-image-1.jpg" alt="">
-                    </a>
-                  </li>
-                  <li class="camparison__characteristics-item camparison__characteristics-item--vendor">
-                    <span class="camparison__characteristics-name">Производитель</span>
-                    <span class="camparison__vendor filter">
-                      <span class="visually-hidden">iru.</span>
-                      <img class="filter__image" src="@img/filter-vendor-iru.png" alt="">
-                    </span>
-                  </li>
-                  <li class="camparison__characteristics-item camparison__characteristics-item--price">
-                    <span class="camparison__characteristics-name">Стоимость</span>
-                    <div class="camparison__prices">
-                      <span class="camparison__price">582 940 ₽</span>
-                      <span class="camparison__credit">или <span class="product-page__credit-value">24 290 ₽</span> в месяц</span>
-                    </div>
-                  </li>
-                  <li class="camparison__characteristics-item">
-                    <span class="camparison__characteristics-name">Тип процессора</span>
-                    <span class="camparison__characteristics-value">Intel</span>
-                  </li>
-                  <li class="camparison__characteristics-item">
-                    <span class="camparison__characteristics-name">Поколение процессоров</span>
-                    <span class="camparison__characteristics-value">Intel Xeon Scalable серии 8100/8200</span>
-                  </li>
-                  <li class="camparison__characteristics-item">
-                    <span class="camparison__characteristics-name">Форм-фактор</span>
-                    <span class="camparison__characteristics-value">1U</span>
-                  </li>
-                  <li class="camparison__characteristics-item">
-                    <span class="camparison__characteristics-name">Кол-во слотов для HDD</span>
-                    <span class="camparison__characteristics-value">8</span>
-                  </li>
-                  <li class="camparison__characteristics-item">
-                    <span class="camparison__characteristics-name">Оперативная память</span>
-                    <span class="camparison__characteristics-value">4 слота от 2 до 32 Гб</span>
-                  </li>
-                  <li class="camparison__characteristics-item">
-                    <span class="camparison__characteristics-name">Обьем памяти</span>
-                    <span class="camparison__characteristics-value">3 Тбайт (24 X 128 Гбайт) LRDIMM</span>
-                  </li>
-                  <li class="camparison__characteristics-item">
-                    <span class="camparison__characteristics-name">Количество блоков питания</span>
-                    <span class="camparison__characteristics-value">Количество блоков питания</span>
+                    <span class="camparison__characteristics-value">2</span>
                   </li>
                   <li class="camparison__characteristics-item">
                     <span class="camparison__characteristics-name">Наличие</span>
@@ -331,7 +344,7 @@
 {% endblock content %}
 
 {% block modal %}
-
+  {% include "./blocks/modal-order.j2" %}
 {% endblock %}
 
 {% block js %}
@@ -339,6 +352,6 @@
   <script src="./js/swiper-bundle.min.js"></script>
   <script src="./js/swipers.min.js"></script>
   <script src="./js/tabs.min.js"></script>
-  <script src="./js/product-page.min.js"></script>
+  <script src="./js/comparison.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
