--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -145,3 +145,18 @@
     opacity: 0.7;
   };
 }
+
+.modal__product-name {
+  display: block;
+}
+
+.modal--order {
+  & .modal__wrapper {
+    flex-direction: column;
+
+    @media (min-width: $tablet-width) {
+      max-width: 640px;
+    }
+  }
+
+}
