--- a/src/views/blocks/modal-order.j2
+++ b/src/views/blocks/modal-order.j2
@@ -1,7 +1,7 @@
 <div class="modal modal--order">
   <div class="modal__wrapper container">
     <div class="modal__content">
-      <p class="modal__title">Отправьте заявку и мы перезвоним в&nbsp;течение 30 минут</p>
+      <p class="modal__title">Заказать <span class="modal__product-name">сервер HPE ProLiant DL380 Gen10</span></p>
       <form class="modal__form form" action="https://echo.htmlacademy.ru" method="get">
         <label class="form__label">
           <span class="modal__label-text form__label-text">Ваше имя</span>
@@ -21,6 +21,7 @@
             <input class="form__field" type="tel" id="modal-order-phone" name="modal-order-phone" placeholder="+7 (999) 999-99-99" required data-pristine-required-message="Обязательно к заполнению">
           </label>
         </div>
+        <input class="visually-hidden" type="text" id="modal-order-product" name="modal-order-product" value="">
         <button class="button form__submit-button" type="submit">Отправить заявку</button>
       </form>
     </div>
